--- a/.gitignore
+++ b/.gitignore
@@ -94,3 +94,37 @@ target/
 
 # files lock
 *.lock
+
+############################################
+## LATEX TEMPORARY FILES
+############################################
+
+*.log
+*.aux
+*.bbl
+*.blg
+*.tex.undo
+*.tex.bak
+*.~te
+*.$te
+*.DVX
+*.DDF
+*.synctex.gz
+*.synctex.gz(busy)
+*.fdb_latexmk
+*.fls
+*.out
+*.toc
+*.lof
+*.lot
+*.idx
+*.ilg
+*.ind
+
+*.dvi
+*.ps
+
+############################################
+# do not upload secret infomation
+myresume.tex
+myresume.pdf
