--- a/.editorconfig
+++ b/.editorconfig
@@ -1,32 +1,28 @@
-root = true
+# http://editorconfig.org
+root                     = true
 
 [*]
-indent_style = space
-indent_size = 2
-end_of_line = lf
+indent_style             = space
+indent_size              = 2
+end_of_line              = lf
 trim_trailing_whitespace = true
-charset = utf-8
-insert_final_newline = false
+charset                  = utf-8
+insert_final_newline     = false
+max_line_length          = 80
 
-[*.{py,sh,feature}]
-max_line_length = 80
-indent_size = 4
+[*.{py,sh,sql}]
+indent_size              = 4
+
+[*.md]
+trim_trailing_whitespace = false
 
 # Tabs
-
-[*.{go,less,css}]
-indent_style = tab
+[*.{less,css}]
+indent_style             = tab
 
 [Vagrantfile]
-indent_style = tab
+indent_style             = tab
 
 [Makefile]
-indent_style = tab
-
-# indent_size
-
-[*.{go}]
-indent_size = 4
-
-[README.md]
-max_line_length = 80
+indent_style             = tab
+indent_size              = 4
