--- a/.pylintrc
+++ b/.pylintrc
@@ -12,7 +12,7 @@
 
 # Add files or directories to the blacklist. They should be base names, not
 # paths.
-ignore=migrations,settings.py,settings_openshift.py,settings_test.py,settings_test_mysql.py,settings_test_postgresql.py,settings_test_sqlite.py,.git,test-repos,repos,settings_test_nose.py
+ignore=migrations/{0000..1000}*, settings.py, settings_openshift.py, settings_test, settings_test.py, settings_test_mysql.py, settings_test_postgresql.py, settings_test_sqlite.py, .git, test-repos, repos, settings_test_nose.py
 
 # Pickle collected data for later comparisons.
 persistent=yes
@@ -135,7 +135,7 @@ init-import=no
 
 # A regular expression matching the name of dummy variables (i.e. expectedly
 # not used).
-dummy-variables-rgx=dummy
+# dummy-variables-rgx=dummy,_
 
 # List of additional names supposed to be defined in builtins. Remember that
 # you should avoid to define new builtins when possible.
