--- a/.bumplus.toml
+++ b/.bumplus.toml
@@ -1,20 +1,26 @@
-version = '0.0.1'
+version = '0.1.0'
 
-[[files."CHANGELOG.md"]]
+[[files."CHANGELOG.rst"]]
 search = """
-## [Unreleased]
+`Unreleased`_
+*************
+"""
+
+
+replace = """
+`Unreleased`_
+*************
+
+
+`{{new_version}}`_ - {{utcnow | strftime('%Y-%m-%d')}}
+**********************
+"""
+
+[[files."CHANGELOG.rst"]]
+search = """
+.. _`Unreleased`: https://github.com/luismayta/resume/compare/{{old_version}}...HEAD
 """
 replace = """
-## [Unreleased]
-
-## [{{new_version}}] - {{utcnow | strftime('%Y-%m-%d')}}
-"""
-
-[[files."CHANGELOG.md"]]
-search = """
-[Unreleased]: https://github.com/labpositiva/ansible-role-python/compare/{{old_version}}...HEAD
-"""
-replace = """
-[Unreleased]: https://github.com/labpositiva/ansible-role-python/compare/{{new_version}}...HEAD
-[{{new_version}}]: https://github.com/labpositiva/ansible-role-python/compare/{{old_version}}...{{new_version}}
+.. _`Unreleased`: https://github.com/luismayta/resume/mobility-api/compare/{{new_version}}...HEAD
+.. _`{{new_version}}`: https://github.com/luismayta/resume/compare/{{old_version}}...{{new_version}}
 """
