chore: settings docker-compose (#26)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,6 @@ services:
       context: .
       dockerfile: docker/app/Dockerfile
     volumes:
-      - .:/app
+      - .:/usr/src
     env_file:
       - .env
