--- a/docker-compose/test.yml
+++ b/docker-compose/test.yml
@@ -2,3 +2,12 @@
 # https://docs.docker.com/compose/
 #
 # Usage: test up
+version: '3'
+services:
+
+  app:
+    build:
+      context: .
+      dockerfile: docker/app-test/Dockerfile
+    env_file:
+      - .env
