chore: settings dockerfile app (#26)

--- a/docker/app/Dockerfile
+++ b/docker/app/Dockerfile
@@ -1,5 +1,9 @@
 FROM labpositiva/latex:3.6.1
 MAINTAINER Luis Mayta <@slovacus>
 
-# set working directory to /app/
-WORKDIR /app/
+COPY requirements.txt /usr/src/
+
+# set working directory to /usr/src
+WORKDIR /usr/src
+
+RUN pip install --no-cache -r /usr/src/requirements.txt
