chore: settings ttf (#27)

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,9 +10,10 @@
     -   id: check-merge-conflict
         files: ^tf|-|\.(py|tfvars|tf|tfenv|env|yml|yaml|pem|key|mock)$
     -   id: end-of-file-fixer
-        files: ^tf|-|\.(py|env|yml|yaml|pem|key|mock)$
+        files: ^\.(py|env|yml|yaml|pem|key|mock)$
     -   id: check-added-large-files
-        files: ^tf|-|\.(py|env|yml|yaml|ttf)$
+        files: ^\.(py|env|yml|yaml)$
+        exclude: ^migrations/.*\.py$
     -   id: check-case-conflict
     -   id: check-json
         language_version: python3
