fix: settings pre-commit (0.3.2)

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,26 +1,24 @@
 -   repo: https://github.com/pre-commit/pre-commit-hooks.git
-    sha: v0.9.3
+    sha: v2.1.0
     hooks:
-    -   id: trailing-whitespace
-        language_version: python3
-    -   id: end-of-file-fixer
-        files: ^tf|-|\.(py|env|yml|yaml|pem|key|mock)$
     -   id: detect-private-key
         files: ^(?!\.?git-crypt)
     -   id: check-merge-conflict
+    -   id: trailing-whitespace
+        language_version: python3
         files: ^tf|-|\.(py|tfvars|tf|tfenv|env|yml|yaml|pem|key|mock)$
     -   id: end-of-file-fixer
         files: ^tf|-|\.(py|env|yml|yaml|pem|key|mock)$
     -   id: check-added-large-files
-        files: ^\.(py|env|yml|yaml)$
-        exclude: ^migrations/.*\.py$
+        files: ^tf|-|\.(py|env|yml|yaml)$
     -   id: check-case-conflict
     -   id: check-json
-        language_version: python3
+    -   id: pretty-format-json
+        args:
+        - --autofix
     -   id: check-xml
         language_version: python3
     -   id: check-yaml
-        language_version: python3
     -   id: check-case-conflict
     -   id: check-byte-order-marker
     -   id: check-ast
@@ -29,15 +27,17 @@
     -   id: autopep8-wrapper
         args:
         - -i
-        - --ignore=E501
+        - --ignore=E501,D205
         language_version: python3
     -   id: double-quote-string-fixer
     -   id: check-docstring-first
-    -   id: debug-statements
+    -   id: detect-aws-credentials
     -   id: requirements-txt-fixer
     -   id: check-symlinks
     -   id: name-tests-test
-        args: [--django]
+        exclude: (src/tests/steps/*)
+        args:
+        - --django
     -   id: file-contents-sorter
     -   id: fix-encoding-pragma
     -   id: sort-simple-yaml
@@ -47,37 +47,22 @@
         - --max-line-length=80
         - --diff
         - --exclude=docs,migrations
--   repo: https://github.com/pre-commit/mirrors-pylint.git
-    sha: v1.7.2
-    hooks:
-    -   id: pylint
-        language_version: python3
-        exclude: ^migrations/.*\.py$
-        args:
-        - --rcfile=.pylintrc
-        - --errors-only
-        - --disable=no-name-in-module,import-error
-        - --ignore=settings_test, migrations
+    -   id: check-executables-have-shebangs
 -   repo: https://github.com/pre-commit/pre-commit.git
-    sha: v1.1.0
+    sha: v1.14.2
     hooks:
     -   id: validate_manifest
--   repo: https://github.com/asottile/reorder_python_imports.git
-    sha: v0.3.5
-    hooks:
-    -   id: reorder-python-imports
-        language_version: python3
 -   repo: https://github.com/detailyang/pre-commit-shell.git
-    sha: 1.0.2
+    sha: 1.0.4
     hooks:
     -   id: shell-lint
-        exclude: ^script/wait-for-it.sh$
+        exclude: ^extras/script/wait-for-it.sh$
         args:
         - --exclude=SC1072,SC1073,SC2068
--   repo: https://github.com/antonbabenko/pre-commit-terraform.git
-    sha: v1.2.0
+-   repo: https://github.com/asottile/add-trailing-comma
+    sha: v0.7.1
     hooks:
-    -   id: terraform_fmt
+    -   id: add-trailing-comma
 -   repo: https://github.com/Lucas-C/pre-commit-hooks-safety
     sha: v1.1.0
     hooks:
@@ -88,7 +73,38 @@
     -   id: python-bandit-vulnerability-check
         args: []
         files: .py$
--   repo: https://github.com/asottile/add-trailing-comma
-    sha: v0.6.4
+-   repo: https://github.com/Lucas-C/pre-commit-hooks-nodejs
+    sha: v1.1.0
     hooks:
-    -   id: add-trailing-comma
+    -   id: markdown-toc
+-   repo: git://github.com/Lucas-C/pre-commit-hooks-markup
+    sha: v1.0.0
+    hooks:
+    -   id: rst-linter
+        exclude: (docs/*|tests/*)
+-   repo: https://github.com/pricematch/pricematch-pre-commit-hooks
+    sha: 93f5296d960021ee1f507a59a0bca1fe8f73c285
+    hooks:
+    -   id: do_not_commit
+-   repo: git://github.com/luismayta/pre-commit-isort
+    sha: 1.0.1
+    hooks:
+    -   id: isort
+        exclude: __pycache__|migrations|_build|.tox|pootle/static|pootle/translations|pootle/locale|pootle/assets|templates
+        args:
+        - --settings-path=.isort.cfg
+-   repo: https://github.com/pre-commit/mirrors-pylint.git
+    sha: v2.3.0.dev1
+    hooks:
+    -   id: pylint
+        exclude: __pycache__|migrations|conf.py|_build|.tox|pootle/static|pootle/translations|pootle/locale|pootle/assets|templates
+        args:
+        - --rcfile=.pylintrc
+        - --disable=no-name-in-module,import-error,ungrouped-imports
+        - --ignore=settings_test, migrations
+-   repo: https://github.com/luismayta/pre-commit-mypy.git
+    sha: 0.1.1
+    hooks:
+    -   id: mypy
+        args:
+        - --ignore-missing-imports
