--- a/.gitattributes
+++ b/.gitattributes
@@ -133,5 +133,12 @@ bin/* text eol=lf
 *.pyc       binary
 *.pdf       binary
 *.bz2       binary
-*.sh linguist-language=go
-*.jar binary
+*.webm      binary
+*.class     binary
+*.dll       binary
+*.ear       binary
+*.jar       binary
+*.so        binary
+*.war       binary
+*.xls       binary
+*.xlsx       binary
