--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,16 @@
-# resume: Docker Compose
+# Docker Compose
 # https://docs.docker.com/compose/
-#
 # Usage: docker-compose up
-version: '3'
+---
+version: "3"
 services:
 
   app:
-    restart: always
-    image: labpositiva/latex:3.6.1
     build:
       context: .
-      dockerfile: docker/app/Dockerfile
+      dockerfile: provision/docker/app/Dockerfile
+    environment: &environment
+      - STAGE=local
     volumes:
       - .:/usr/src
     env_file:
