--- a/.tmuxinator.yml
+++ b/.tmuxinator.yml
@@ -1,6 +1,6 @@
 # ~/.tmuxinator/resume.yml
 name: resume
-root: <%= ENV["PROJECTS"] %>/latex/resume
+root: ./
 # Optional tmux socket
 # socket_name: foo
 
@@ -19,14 +19,13 @@ on_project_start: make environment
 # on_project_restart: command
 
 # Run on project exit ( detaching from tmux session )
-on_project_exit: make docker.down
+# on_project_exit: make docker.down
 
 # Run on project stop
-on_project_stop: make docker.down
+# on_project_stop: make docker.down
 
 # Runs in each window and pane before window/pane specific commands. Useful for setting up interpreter versions.
-pre_window: pyenv activate resume
-
+# pre_window: eval $(env-secrets bw me/env)
 # Pass command line options to tmux. Useful for specifying a different tmux.conf.
 # tmux_options: -f ~/.tmux.mac.conf
 
@@ -47,11 +46,6 @@ windows:
       layout: main-vertical
       panes:
         - ipython:
-  - databases:
-      layout: main-vertical
-      panes:
-        - postgresql:
-        - ls:
   - docker:
       layout: main-vertical
       panes:
