--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
   build:
     runs-on: Ubuntu-20.04
     container:
-      image: $IMAGE
+      image: "${IMAGE}"
       volumes:
         - $pwd:/root
     steps:
