--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,14 +4,11 @@ on:
   pull_request:
     branches:
       - develop
-env:
-  IMAGE: hadenlabs/xelatex:18.04
-
 jobs:
   build:
     runs-on: Ubuntu-20.04
     container:
-      image: "${IMAGE}"
+      image: hadenlabs/xelatex:18.04
       volumes:
         - $pwd:/root
     steps:
