--- a/.github/workflows/resume.yml
+++ b/.github/workflows/resume.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - develop
 jobs:
-  build:
+  resume:
     runs-on: Ubuntu-20.04
     container:
       image: hadenlabs/xelatex:18.04
