--- a/.github/workflows/resume.yml
+++ b/.github/workflows/resume.yml
@@ -18,9 +18,9 @@ jobs:
       - name: commit resume pdf
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
-          commit_message: "ci: generate resume"
+          commit_message: 'ci: generate resume'
           branch: develop
           commit_options: '--no-verify --signoff'
-          commit_user_name: "@slovacus"
-          commit_user_email: "slovacus@gmail.com"
-          commit_author: "slovacus <slovacus@gmail.com>"
+          commit_user_name: '@slovacus'
+          commit_user_email: 'slovacus@gmail.com'
+          commit_author: 'slovacus <slovacus@gmail.com>'
