--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,13 +1,4 @@
-exclude: 'provision/ansible/prod/roles/contrib|provision/ansible/dev/roles/contrib|vendor|docs|.serverless|.serveless_nextjs|node_modules|migrations|.git|.tox|.gen'
-default_language_version:
-  # force all unspecified python hooks to run python3
-  python: python3.8.0
-
 repos:
-  - repo: https://github.com/pre-commit/pre-commit
-    rev: v2.12.1
-    hooks:
-      - id: validate_manifest
   - repo: https://github.com/codespell-project/codespell
     rev: v2.0.0
     hooks:
@@ -19,45 +10,12 @@ repos:
             .+\.node_modules\/.*$|
             .+\.lock$|
           )$
-  - repo: https://github.com/Lucas-C/pre-commit-hooks-safety
-    rev: v1.2.1
-    hooks:
-      - id: python-safety-dependencies-check
-  - repo: https://github.com/Lucas-C/pre-commit-hooks-bandit
-    rev: v1.0.4
-    hooks:
-      - id: python-bandit-vulnerability-check
-        args: []
-        files: .py$
-  - repo: https://github.com/pre-commit/mirrors-pylint
-    rev: v3.0.0a1
-    hooks:
-      - id: pylint
-        exclude: __pycache__|migrations|conf.py|_build|.tox|pootle/static|pootle/translations|pootle/locale|pootle/assets|templates
-        args:
-          - --rcfile=.github/linters/.pylintrc
-          - --disable=no-name-in-module,import-error,ungrouped-imports
-          - --ignore=settings_test, migrations
-  - repo: https://github.com/ambv/black
-    rev: 20.8b1
-    hooks:
-      - id: black
-  - repo: https://gitlab.com/pycqa/flake8
-    rev: 3.9.1
-    hooks:
-      - id: flake8
-  - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v0.812
-    hooks:
-      - id: mypy
-        args:
-          - --ignore-missing-imports
-        exclude: migrations|conf.py|_build|.tox|pootle/static|pootle/translations|pootle/locale|pootle/assets|templates
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v3.4.0
     hooks:
       - id: detect-private-key
         files: ^(?!\.?git-crypt)
+        exclude: .github/linters/.gitleaks.toml
       - id: check-merge-conflict
       - id: trailing-whitespace
         files: ^tf|-|\.(py|tfvars|tf|tfenv|env|yml|yaml|pem|key|mock)$
@@ -81,15 +39,8 @@ repos:
       - id: file-contents-sorter
       - id: fix-encoding-pragma
       - id: sort-simple-yaml
-      - id: check-executables-have-shebangs
-  - repo: https://github.com/asottile/blacken-docs
-    rev: v1.10.0
-    hooks:
-      - id: blacken-docs
-        additional_dependencies:
-          - black
   - repo: https://github.com/hadenlabs/pre-commit-hooks
-    rev: c2b6aefa5f710fc1289b549ba81f1f83eb8cc137
+    rev: f6cc97fd7683611087766bb542c9a11e70db2f92
     hooks:
       - id: do-not-commit
       - id: markdown-link-check
@@ -110,6 +61,7 @@ repos:
           - --path=.
           - --repo-config-path=.github/linters/.gitleaks.toml
           - --verbose
+
   - repo: local
     hooks:
       - id: prettier
@@ -118,19 +70,21 @@ repos:
         entry: ./node_modules/prettier/bin-prettier.js
         args:
           - '--write=true'
-          - '--list-different'
           - '--config=.github/linters/prettier.config.js'
           - '--ignore-path=.github/linters/.prettierignore'
         files: \.(js|jsx|json|ts|tsx|mjs|d.ts|md|yml|yaml|gql|graphql|mjml)$
         exclude: node_modules
       - id: eslint
         name: eslint
-        language: system
-        pass_filenames: true
-        entry: node_modules/eslint/bin/eslint.js --config=.github/linters/.eslintrc.js --ignore-path=.github/linters/.eslintignore --color
+        language: node
+        entry: node_modules/eslint/bin/eslint.js
         args:
           - '--fix'
+          - '--color'
+          - '--config=.github/linters/.eslintrc.js'
+          - '--ignore-path=.github/linters/.eslintignore'
         files: \.(js|jsx|ts|tsx|mjs|d.ts)$
+        exclude: node_modules
       - id: stylint
         name: stylint
         language: system
