--- a/provision/generators/README.yaml
+++ b/provision/generators/README.yaml
@@ -21,21 +21,18 @@ github_repo: luismayta/resume
 
 # Badges to display
 badges:
+  - name: GitHub release
+    image: https://img.shields.io/github/release/luismayta/resume?style=flat-square
+    url: https://github.com/luismayta/resume/releases/latest
   - name: Lint
-    image: https://github.com/luismayta/resume/actions/workflows/lint.yml/badge.svg?branch=develop
-    url: https://github.com/luismayta/resume/actions
-  - name: Build
-    image: https://github.com/luismayta/resume/actions/workflows/resume.yml/badge.svg?branch=develop
-    url: https://github.com/luismayta/resume/actions
-  - name: License
-    image: https://img.shields.io/github/license/luismayta/resume.svg
-    url: https://github.com/luismayta/resume
-  - name: Issues
-    image: https://img.shields.io/github/issues/luismayta/resume.svg
-    url: https://github.com/luismayta/resume
-  - name: Latest Release
-    image: https://img.shields.io/github/release/luismayta/resume.svg
-    url: https://github.com/luismayta/resume/releases
+    image: https://img.shields.io/github/workflow/status/luismayta/resume/lint-code
+    url: https://github.com/luismayta/resume/actions?workflow=lint-code
+  - name: Conventional Commits
+    image: https://img.shields.io/badge/Conventional%20Commits-1.0.0-yellow
+    url: https://conventionalcommits.org
+  - name: KeepAChangelog
+    image: https://img.shields.io/badge/Keep%20A%20Changelog-1.0.0-%23E05735
+    url: https://keepachangelog.com
 
 # Short description of this project
 description: |-
